# graphrag

./: .gitmodules  pyproject.toml
